# llm-azure-compat

./: MANIFEST.in  README.md  manifest.yaml  pyproject.toml  requirements.txt
models/llm/: _position.yaml  claude-4.1.yaml  gemini-2.5-flash.yaml  gemini-2.5-pro.yaml  gpt-4.1.yaml  gpt-5.yaml  llm.py  o3.yaml
models/text_embedding/: _position.yaml  text-embedding-3-large.yaml  text-embedding-3-small.yaml  text-embedding-ada-002.yaml  text_embedding.py
provider/: llm-azure-compat.py  llm-azure-compat.yaml
