[project]
name = "llm-azure-compat"
version = "0.1.0"
description = "Azure-like gateway provider for Dify (LLM + Text Embedding)"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.27",
  "dify-plugin>=0.5.1,<0.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "provider*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.svg", "*.md"]
